src/objects/Customer_Bikes__c.object
<CustomObject>
    <label>Bike Owned</label>
    <nameField>
        <displayFormat>B-{0}</displayFormat>
        <label>Customer Bikes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bikes Owned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Bike__c</fullName>
        <label>Bike</label>
        <referenceTo>Bike__c</referenceTo>
        <relationshipLabel>Bikes Owned</relationshipLabel>
        <relationshipName>Bikes_Owned</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bikes Owned</relationshipLabel>
        <relationshipName>Bikes_Owned</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
</CustomObject>